# sitting-posture

./: .gitignore  README.md  classification.ipynb  config.lua  data.py  dvc.yaml  image_preprocessing.ipynb  keypoints_extraction.ipynb  main.py  params.yaml  preprocessor.py  pyproject.toml  requirements.txt  sdxl.ipynb
.devcontainer/: devcontainer.json
.dvc/: config
data/: .gitignore  data.csv.dvc  poses_images_out.dvc
dumps/: .gitignore  mymodel.keras.dvc
dvclive/: .gitignore  metrics.json  model_performance_summary.csv  report.html
dvclive/adaboost/: cv_results.json.dvc  emissions.csv.dvc  emissions_inference.csv.dvc  htcv_results.json.dvc  metrics.json  params.yaml
dvclive/nn/: .gitignore  cv_results.json.dvc  emissions.csv.dvc  emissions_inference.csv.dvc  metrics.json  params.yaml
dvclive/plots/: .gitignore
dvclive/xgb/: .gitignore  cv_results.json.dvc  emissions.csv.dvc  emissions_inference.csv.dvc  htcv_results.json.dvc  metrics.json  params.yaml
dvclive/xgboost/: cv_results.json.dvc  emissions.csv.dvc  emissions_inference.csv.dvc  htcv_results.json.dvc
models/: .gitignore
models/adaboost/: adaboost.joblib  adaboost_front.joblib  adaboost_left.joblib  adaboost_right.joblib
models/nn/: nn_left.joblib
models/xgb/: xgb.json  xgb_front.json  xgb_left.json  xgb_right.json
notebooks/: image_preprocessing.ipynb  keypoints_extraction.ipynb
notebooks/image_generation/: sdxl.ipynb
src/: data.py  evaluate.py  extract_keypoints.py  featurize.py  model_comparison.py  prepare.py  processing_time_benchmark.py  roc_visualization.py
(+277 files in other folders)
