[project]
name = "sitting-posture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvclive>=3.48.3",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.3",
    "opencv-python>=4.12.0.88",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "xgboost>=3.0.2",
]
