[project]
name = "sitting-posture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[gs]>=3.61.0",
    "dvclive>=3.48.3",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.12",
    "marimo>=0.14.10",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "opencv-python>=4.12.0.88",
    "polars>=1.31.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "tensorflow-hub>=0.16.1",
    "xgboost>=3.0.2",
]
